--- a/src/components/home/Clients.css
+++ b/src/components/home/Clients.css
@@ -1,13 +1,15 @@
 .clients-section {
   padding: 4rem 2rem;
   background-color: var(--color-background);
-  text-align: center;
 }
 
 .clients-title-container {
-  display: inline-block;
+  display: block;
   position: relative;
   margin-bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
 
 .clients-title {
@@ -16,6 +18,7 @@
   margin: 0;
   position: relative;
   z-index: 1;
+  text-align: center;
 }
 
 .animated-line {
