--- a/src/components/home/Philosophy.css
+++ b/src/components/home/Philosophy.css
@@ -21,11 +21,12 @@
 }
 
 .philosophy-title-container {
-  display: inline-block;
+  display: block;
   position: relative;
   margin-bottom: 3rem;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
 }
 
 .philosophy-title {
@@ -38,6 +39,7 @@
   opacity: 0;
   transform: translateY(30px);
   transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
 }
 
 .philosophy-title.animate-in {
